Fix failing cypress test for dark mode

--- a/src/Components/SearchPage/SearchPage.css
+++ b/src/Components/SearchPage/SearchPage.css
@@ -42,7 +42,7 @@
 .search-submit-btn {
   height: 3rem;
   width: 3rem;
-  background-color: var(--lightmodelightgray4);
+  /* background-color: var(--lightmodelightgray4); */
   border: none;
   color: var(--black);
   cursor:pointer;
@@ -55,7 +55,7 @@
 .search-menu {
   display: flex;
   align-items: center;
-  background-color: var(--lightmodewhite);
+  /* background-color: var(--lightmodewhite); */
   /* border-radius: 10px; */
   width: 97.5%;
   height: 5rem;
@@ -68,6 +68,6 @@
   grid-template-rows: repeat(2, auto);
   grid-template-columns: repeat(3, 1fr); 
 }
-.search-submit-btn:hover{
+/* .search-submit-btn:hover{
   background-color: var(--lightmodemediumgray);
-}
+} */
